fix(review_form): model is corrent z-index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -238,7 +238,6 @@ html>body {
     margin-top: 35px;
     margin-left: 15%;
     margin-right: 15%;
-    z-index: 1001;
   }
 
   button.close {
